Add search component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,10 @@
-@import "base/variables";
-
-// foundation
-@import "base/foundation-settings";
-@import "foundation";
-@include foundation-everything;
-
+// @import "base/variables";
+//
+// // foundation
+// @import "base/foundation-settings";
+// @import "foundation";
+// @include foundation-everything;
+.add-button {
+  background: lightblue;
+}
 // Components
