--- a/app/styles/components/_container.scss
+++ b/app/styles/components/_container.scss
@@ -2,8 +2,8 @@ $light-grey: #e6e6e6;
  $light-grey-border: #ccc;
  $light-color: #f0f0f0;
 .container {
-  background: $light-grey;
-  border: 1px solid $light-grey-border;
+  // background: $light-grey;
+  // border: 1px solid $light-grey-border;
   border-radius: 5px;
   padding: 0;
   margin-bottom: 2rem;
