--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,7 +11,7 @@
   display: block;
 }
 body {
-  // background: url('/Users/morph/Desktop/ReactToDo/app/public/img/bg.jpg') no-repeat center;
+  // background: url(img/bg.jpg) no-repeat center;
   // background-size: cover;
 
 }
@@ -22,28 +22,33 @@ h1 {
   height: 100vh;
 }
 .btn {
-  border-radius: 0;
+border-radius: 0;
 border: none;
 outline: none;
-width: 50%;
+width: 100%;
+height: 50px;
 display: block;
 margin: 0 auto;
 }
 $opacity: 0.9;
 $background-grey: #f8f8f8;
 .wrapper {
-max-width: 500px;
+max-width: 600px;
 display: block;
 margin: 100px auto;
 background: rgba($background-grey, $opacity);
-padding: 30px;
+// padding: 30px;
 min-height: 432px;
 }
 .form-control {
   margin-bottom: 25px;
 }
+.form-group {
+  padding: 2rem;
+}
 .todo-list {
-
+  height: 262px;
+  overflow: scroll;
 }
 .todo {
 
@@ -51,12 +56,24 @@ min-height: 432px;
 .todo-completed {
 
 }
+input[type="search"] {
+  height: 50px;
+border-radius: 0;
+font-size: 18px;
+// font-weight: 300;
+}
+input[type="text"] {
+  height: 50px;
+  border-radius: 0;
+  font-size: 18px;
+}
 input[type="checkbox"] {
   float: left;
   margin-right: 15px;
 }
 .container__search {
   border: 1px solid #ccc;
+  padding: 2rem;
 }
 .text {
   float: left;
