--- a/app/styles/components/_todo.scss
+++ b/app/styles/components/_todo.scss
@@ -1,20 +1,21 @@
 .todo {
-  align-items: center;
+  // align-items: center;
   cursor: pointer;
-  display: flex;
-  padding: 1rem;
+  // display: flex;
+  padding: 3rem;
   transition: background .3s ease;
 
   p, input {
-    margin: 0;
+    margin-top: 0;
   }
 
   > :first-child {
     margin-right: 1rem;
+    margin-top: 1rem;
   }
 
   &:hover {
-    background: #f0f0f0;
+    background: #ddd;
   }
 }
 
@@ -24,7 +25,8 @@
 
 .todo-completed {
   p, .todo-subtext {
-    color: $light-color;
+    // color: $light-color;
+    color: #888;
     text-decoration: line-through;
   }
 }
